k8s-deployments/01-manual/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 01-manual
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 80
      protocol: TCP
      targetPort: 80
