k8s-deployments/01-manual/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manual
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: SPECIFIED_BY_OVERLAYS
            pathType: Prefix
            backend:
              service:
                name: SPECIFIED_BY_OVERLAYS
                port:
                  number: 3000
